--- a/vignettes/Case studies/DPMFA_LEON-T_longformat.Rmd
+++ b/vignettes/Case studies/DPMFA_LEON-T_longformat.Rmd
@@ -124,9 +124,6 @@ if(MFAtype == "PMFA"){
 } else (print("DPMFA not implemented yet"))
 
 
-
-
-
 ```
 
 ```{r Make a df with the emissions}
@@ -272,7 +269,7 @@ unique_combinations <- DPMFA_sink_micro |>
   distinct(Source, Polymer)
 
 
-sample_df <- data.frame()
+Material_Parameters_n <- data.frame()
 
 for(i in 1:nrow(unique_combinations)){
   
@@ -286,6 +283,7 @@ for(i in 1:nrow(unique_combinations)){
     # Not sure what the 3 lines below do.
     group_by(VarName, Scale, SubCompart, Species, Polymer) |>
     filter(if (n() > 1) MP_source == source | (MP_source == "" & !any(MP_source == source)) else TRUE) |>
+    mutate(MP_source = replace_na(MP_source, source)) |> 
     ungroup()
   
   n_vars <- nrow(input_vars)
@@ -297,113 +295,87 @@ for(i in 1:nrow(unique_combinations)){
   # somthing like this should work to get the nested tibble with data of samples
   sample_df_var <-  
     input_vars |> 
-    mutate(nvar = c(1:8)) |> 
+    mutate(nvar = c(1:n_vars)) |> 
     rowwise() |> 
     mutate(
       data = 
         case_match(Distribution,
-                   "Triangular" ~ list(triangular(lhs_samples[, nvar], a, b, c)),
-                   "Uniform" ~  list(uniform(lhs_samples[, nvar], a, b)),
-                   "Powerlaw" ~  list( power_law(lhs_samples[, nvar], a, b, c)),
-                   "Trapezoidal" ~  list( trapezoidal(lhs_samples[, nvar], a, b, c, d)),
+                   "Triangular" ~ list(tibble(value=triangular(lhs_samples[, nvar], a, b, c))),
+                   "Uniform" ~  list(tibble(value=uniform(lhs_samples[, nvar], a, b))),
+                   "Powerlaw" ~  list(tibble( value=power_law(lhs_samples[, nvar], a, b, c))),
+                   "Trapezoidal" ~  list(tibble( value=trapezoidal(lhs_samples[, nvar], a, b, c, d))),
                    .default = NA
         )
     ) 
   
-  sample_df_var <- sample_df_var |>
-    mutate(Polymer = pol) |>
-    mutate(Source = source)
+  # sample_df_var <- sample_df_var |>
+  #   mutate(Polymer = pol) |>
+  #   mutate(Source = source)
   
-  sample_df <- rbind(sample_df, sample_df_var)
+  Material_Parameters_n <- rbind(Material_Parameters_n, sample_df_var)
 }
 
+#TODO before explosion export table with some statistics of applied variable ranges for reporting in relation to input variables of each distribution. Aim at: min, p5, p50, mean, p95, max.
 
 scales <- union((World$FromDataAndTo()$fromScale),(World$FromDataAndTo()$toScale))
 subCompartments <-  union((World$FromDataAndTo()$fromSubCompart),(World$FromDataAndTo()$toSubCompart))
 species <- union((World$FromDataAndTo()$fromSpecies),(World$FromDataAndTo()$toSpecies))
 
-sample_df <- 
-  sample_df %>% 
-    separate_rows(Species, sep = "_") |> 
-    separate_rows(SubCompart, sep = "_") |>
-    mutate( Scale = str_replace_all(Scale, "any",
-                                    paste(scales,collapse="__"))) |> 
-    separate_rows(Species, sep = "__") |> 
-    mutate( SubCompart = str_replace_all(SubCompart, "Water",
-                                         paste(c("lake", "sea", "deepocean", "river"),
-                                               collapse = "__"))) |> 
-    separate_rows(SubCompart, sep = "__") |> 
-        mutate( SubCompart = str_replace_all(SubCompart, "Soil",
-                                         paste(subCompartments |> str_subset(c("soil")),
-                                               collapse = "__"))) |> 
-    separate_rows(SubCompart, sep = "__") |> 
-            mutate( SubCompart = str_replace_all(SubCompart, "Sediment",
-                                         paste(subCompartments |> str_subset(c("sediment")),
-                                               collapse = "__"))) |> 
-    separate_rows(SubCompart, sep = "__") |> 
-       mutate( Species = str_replace_all(Species, "any",
+Material_Parameters_n <- 
+  Material_Parameters_n %>% 
+  separate_rows(Species, sep = "_") |> 
+  separate_rows(SubCompart, sep = "_") |>
+  mutate( Scale = str_replace_all(Scale, "any",
+                                  paste(scales,collapse="__"))) |> 
+  separate_rows(Species, sep = "__") |> 
+  mutate( SubCompart = str_replace_all(SubCompart, "Water",
+                                       paste(c("lake", "sea", "deepocean", "river"),
+                                             collapse = "__"))) |> 
+  separate_rows(SubCompart, sep = "__") |> 
+  mutate( SubCompart = str_replace_all(SubCompart, "Soil",
+                                       paste(subCompartments |> str_subset(c("soil")),
+                                             collapse = "__"))) |> 
+  separate_rows(SubCompart, sep = "__") |> 
+  mutate( SubCompart = str_replace_all(SubCompart, "Sediment",
+                                       paste(subCompartments |> str_subset(c("sediment")),
+                                             collapse = "__"))) |> 
+  separate_rows(SubCompart, sep = "__") |> 
+  mutate( Species = str_replace_all(Species, "any",
                                     paste(species,collapse="__"))) |> 
-    separate_rows(Species, sep = "__") |> 
-           mutate( SubCompart = str_replace_all(SubCompart, "any",
-                                    paste(subCompartments,collapse="__"))) |> 
-    separate_rows(SubCompart, sep = "__")
+  separate_rows(Species, sep = "__") |> 
+  mutate( SubCompart = str_replace_all(SubCompart, "any",
+                                       paste(subCompartments,collapse="__"))) |> 
+  separate_rows(SubCompart, sep = "__") |> 
+  rename(Source = MP_source)
+
+
+
+
 
 ```
 
 ```{r Make some figures to show the values chosen from the distributions}
 
-sample_df_Tyre_wear_RUBBER <- sample_df |>
-  filter(Source == "Tyre wear")
+#Example of plot:
 
-alpha_water <- sample_df_Tyre_wear_RUBBER |>
-  filter(varName == "alpha") |>
-  filter(SubCompart == "sea") |>
-  filter(Species == "Small") 
+PlotVariable = "alpha"
+ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |> unnest(data), aes(x=value,y=SubCompart)) +
+  geom_violin()+
+  facet_wrap(vars(Polymer,Species))+
+  xlab(PlotVariable) + scale_x_log10() 
 
-alpha_water <- alpha_water$data[[1]]
+PlotVariable = "RadS"
+ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |> unnest(data), aes(x=value,y=SubCompart)) +
+  geom_violin()+
+  facet_wrap(vars(Polymer,Source))+
+  xlab(paste(PlotVariable)) + scale_x_log10() 
 
-# Make some figures of the distributions
-ggplot(alpha_water, mapping = aes(x = value)) +
-  geom_histogram(bins=50, color="#00AFBB", fill=NA) +
-  labs(title = "Distribution of attachment efficiency for water compartments",
-       x = "Alpha") + scale_x_continuous(trans='log10') +
-  theme_classic()
+PlotVariable = "RhoS"
+ggplot(Material_Parameters_n |> filter(VarName == PlotVariable) |> unnest(data), aes(x=value,y=SubCompart)) +
+  geom_violin()+
+  facet_wrap(vars(Polymer,Source))+
+  xlab(paste(PlotVariable)) 
 
-alpha_soil <- sample_df_Tyre_wear_RUBBER |>
-  filter(varName == "alpha") |>
-  filter(SubCompart == "naturalsoil") |>
-  filter(Species == "Small") 
-
-alpha_soil <- alpha_soil$data[[1]]
-
-# Make some figures of the distributions
-ggplot(alpha_soil, mapping = aes(x = value)) +
-  geom_histogram(bins=50, color="#00AFBB", fill=NA) +
-  labs(title = "Distribution of attachment efficiency for soil and sediment compartments",
-       x = "Alpha")+ scale_x_continuous(trans='log10') +
-  theme_classic()
-
-rads <- sample_df_Tyre_wear_RUBBER |>
-  filter(varName == "RadS")
-
-rads <- rads$data[[1]]
-
-ggplot(rads, mapping = aes(x = value)) +
-  geom_histogram(bins=50, color="#00AFBB", fill=NA) +
-  labs(title = "Distribution of particle radius",
-       x = "Radius (nm)")+
-  theme_classic()
-
-rhos <- sample_df_Tyre_wear_RUBBER |>
-  filter(varName == "RhoS")
-
-rhos <- rhos$data[[1]]
-
-ggplot(rhos, mapping = aes(x = value)) +
-  geom_histogram(bins=50, color="#00AFBB", fill=NA) +
-  labs(title = "Distribution of density",
-       x = "Density (g/m^3)")+
-  theme_classic()
 
 kdeg_soil <- sample_df_Tyre_wear_RUBBER |>
   filter(varName == "kdeg") |>
@@ -455,15 +427,18 @@ if(type == "PMFA"){
     
     emis_source <- DPMFA_sink_micro |>
       filter(Source == source) |>
-      filter(Polymer == pol) #|>
-    #select(Abbr, Emis)
+      filter(Polymer == pol) |>
+      select(Source, Abbr, Year, Polymer,Emis)
     
-    sample_source <- sample_df |>
+    sample_source <- Material_Parameters_n |>
       filter(Source == source) |>
       filter(Polymer == pol) |>
-      select(-c(Source, Polymer))
+      select(VarName, Scale, SubCompart, Species, data) |> 
+      rename(varName = VarName)
     
     solved <- World$Solve((emis_source), needdebug = F, sample_source)
+    solved$SteadyStateConc <- World$GetConcentration()
+    
     solution <- solved$SteadyStateMass |>
       mutate(Polymer = pol) |>
       mutate(Source = source)
@@ -513,6 +488,46 @@ print(paste0("Elapsed time is ", elapsed_time))
 
 # 10000 runs will take 4 hours and 10 minutes per polymer-source combination.
 ```
+
+# paralel version
+
+```{r}
+# library(foreach)
+# registerDoParallel(2)  # use multicore, set to the number of our cores
+# 
+# out.data <- 
+#   foreach(i=c(1:nrow(unique_combinations)), .inorder=FALSE, .errorhandling = "pass") %dopar%  {
+#     
+#     source <- unique_combinations$Source[i]
+#     pol <- unique_combinations$Polymer[i]
+#     
+#     emis_source <- DPMFA_sink_micro |>
+#       filter(Source == source) |>
+#       filter(Polymer == pol) |>
+#       select(Source, Abbr, Year, Polymer,Emis)
+#     
+#     sample_source <- Material_Parameters_n |>
+#       filter(Source == source) |>
+#       filter(Polymer == pol) |>
+#       select(VarName, Scale, SubCompart, Species, data) |> 
+#       rename(varName = VarName)
+#     
+#     solved <- World$Solve((emis_source), needdebug = F, sample_source)
+#     solved$SteadyStateConc <- World$GetConcentration()
+#     solved
+#   }
+# 
+# stopImplicitCluster()
+# 
+# # equivalent to colMeans(m)
+# m <- matrix(rnorm(9), 3, 3)
+# foreach(i=1:ncol(m), .combine=c) %do%
+#   mean(m[,i])
+# foreach(i=1:nrow(m), .combine=rbind) %dopar%
+#   (m[i,] / mean(m[i,]))
+
+```
+
 
 # Prep data and make plots
 
